hphp/test/slow/invalid_argument/1380.php
<?hh

<<__EntryPoint>>
function main_1380(): mixed {
  var_dump(mysql_fetch_object(null, 'stdClass'));
}
